--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@
 Flask==2.2.2
 Flask-Cors==3.0.10
 gunicorn==20.1.0
-selenium==4.7.2
-PyPDF2==3.0.1
-timeout-decorator==0.5.0
-beautifulsoup4==4.11.2
+openai==0.27.4
+youtube-transcript-api==0.5.0
+pytube3==9.6.4
+langchain==0.0.132
+supabase==1.0.3
