--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ gunicorn==20.1.0
 openai==0.27.4
 youtube-transcript-api==0.5.0
 pytube3==9.6.4
-langchain==0.0.132
-supabase==1.0.3
+supabase==0.7.1
+langchain==0.0.133
+unstructured==0.5.11
+unstructured-inference==0.3.2
