--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-Cors==3.0.10
 gunicorn==20.1.0
 openai==0.27.4
 youtube-transcript-api==0.5.0
-pytube3==9.6.4
+pytube==12.1.3
 supabase==0.7.1
 langchain==0.0.133
 unstructured==0.5.11
